Closed Bug 1218617 Opened 10 years ago Closed 10 years ago

Invalidation problem of BasicCompositor with full hwc composition

Categories

(Core :: Graphics: Layers, defect)

Unspecified
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file, 2 obsolete files)

When BasicCompositor is enabled with bug 1210182, it causes invalidation problem when full hwc composition happens.
Assignee: nobody → sotaro.ikeda.g
BasicCompositor did not know rendered area during full hwc composition. The area need to be invalidated in next BasicBompositor's composition.
I confirmed that the patch fixed the problem on master flame-kk.
Updated a comment.
Attachment #8679812 - Attachment is obsolete: true
Remove unnecessary part.
Attachment #8679813 - Attachment is obsolete: true
Attachment #8679814 - Flags: review?(matt.woodrow)
Attachment #8679814 - Flags: review?(matt.woodrow) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: