Bug 1218617 - Invalidate whole widget area after external composition r=mattwoodrow